# py_stream_zip

./: .gitignore  README.md  pyproject.toml  setup.py  test_unzip.py
.github/workflows/: publish-to-pypi.yml
py_stream_zip/: __init__.py  central_directory.py  constants.py  stream_zip.py  utils.py  zip_entry.py
